# computer_vision

./: CMakeLists.txt  Notes  main.cpp
cmake/: FindEigen3.cmake
headers/: notepad.h
src/: CMakeLists.txt  LICENSE  main.cpp  notepad.cpp
src/cpp/math/: AffineFromProjRectificator.cpp  AssistedSimilarityFromProjRectificator.cpp  CameraMatrixDlt.cpp  Correspondence.cpp  Dlt.cpp  DltBase.cpp  EssentialMatrixDlt.cpp  PanoramaDlt.cpp  Ransac.cpp  ReconstructionRansac.cpp  SimilarityFromProjRectificator.cpp  TriangulationDlt.cpp
src/cpp/model/: PanoramaController.cpp  ReconstructionController.cpp
src/cpp/ui/: ClickableLabel.cpp  ReconstructionViewer.cpp
src/header/math/: AffineFromProjRectificator.h  CameraMatrixDlt.h  Correspondence.h  Dlt.h  DltBase.h  EssentialMatrixDlt.h  IPointMapper.h  PanoramaDlt.h  Ransac.h  ReconstructionRansac.h  SimilarityFromProjRectificator.h  TriangulationDlt.h
src/header/model/: PanoramaController.h  ReconstructionController.h  RectificationController.h
src/header/ui/: ClickableLabel.h  ReconstructionViewer.h
src/header/util/: CircularList.h
src/math/header/: AffineRectificator.h  AssistedSimilarityFromProjRectificator.h  IPointMapper.h  ProjectionRectificator.h  SimilarityFromAffineRectificator.h
src/math/src/: AffineFromProjRectificator.cpp  AffineRectificator.cpp  AssistedSimilarityFromProjRectificator.cpp  IPointMapper.cpp  ProjectionRectificator.cpp  SimilarityFromAffineRectificator.cpp  SimilarityFromProjRectificator.cpp
src/models/header/: RectificationController.h
src/models/src/: RectificationController.cpp
src/test/: CMakeLists.txt
src/test/cpp/: main.cpp
src/test/cpp/math/: CameraMatrixDltTest.cpp  DltTest.cpp  PanoramaDltTest.cpp  RansacTest.cpp
src/test/cpp/model/: DltTest.cpp  PanoramaControllerTest.cpp  RansacTest.cpp  ReconstructionControllerTest.cpp
src/ui/header/: ClickableLabel.h  ImageRectificator.h  SelectedPixel.h
src/ui/src/: ImageRectificator.cpp  SelectedPixel.cpp
src/utils/header/: CircularList.h
ui/header/: ClickableLabel.h  ClickablePixMap.h  ImageRectificator.h  SelectedPixel.h
ui/src/: ClickableLabel.cpp  ClickablePixMap.cpp  ImageRectificator.cpp  SelectedPixel.cpp
utils/header/: CircularList.h
utils/src/: CircularList.cpp
